Made it more profitable

--- a/data/bandadd/loot_table/struc/snow_globe.json
+++ b/data/bandadd/loot_table/struc/snow_globe.json
@@ -17,6 +17,15 @@
             "value": "chests/ancient_city_ice_box"
           }
         ]
+      },
+      {
+        "rolls": 1,
+        "entries": [
+          {
+            "type": "minecraft:loot_table",
+            "value": "chests/village/village_snowy_house"
+          }
+        ]
       }
     ]
   }
